@@ -21,7 +21,8 @@
 subroutine ca_ext_src(lo, hi, &
                       old_state, os_lo, os_hi, &
                       new_state, ns_lo, ns_hi, &
-                      src, src_lo, src_hi, problo, dx, time, dt)
+                      src, src_lo, src_hi, &
+                      problo, dx, time, dt) bind(C, name='ca_ext_src')
 
   use amrex_constants_module
   use meth_params_module, only : NVAR, URHO, UEDEN, UEINT, UFS
@@ -30,25 +31,24 @@ subroutine ca_ext_src(lo, hi, &
                                  heating_peak, heating_sigma, prob_type
   use prob_params_module, only: center
   use network
-
   use amrex_fort_module, only : rt => amrex_real
+
   implicit none
 
-  integer, intent(in   ) :: lo(3), hi(3)
-  integer, intent(in   ) :: os_lo(3), os_hi(3)
-  integer, intent(in   ) :: ns_lo(3), ns_hi(3)
-  integer, intent(in   ) :: src_lo(3), src_hi(3)
+  integer,  intent(in   ) :: lo(3), hi(3)
+  integer,  intent(in   ) :: os_lo(3), os_hi(3)
+  integer,  intent(in   ) :: ns_lo(3), ns_hi(3)
+  integer,  intent(in   ) :: src_lo(3), src_hi(3)
   real(rt), intent(in   ) :: old_state(os_lo(1):os_hi(1),os_lo(2):os_hi(2),os_lo(3):os_hi(3),NVAR)
   real(rt), intent(in   ) :: new_state(ns_lo(1):ns_hi(1),ns_lo(2):ns_hi(2),ns_lo(3):ns_hi(3),NVAR)
-  real(rt), intent(  out) :: src(src_lo(1):src_hi(1),src_lo(2):src_hi(2),src_lo(3):src_hi(3),NVAR)
-  real(rt), intent(in   ) :: problo(3), dx(3), time, dt
+  real(rt), intent(inout) :: src(src_lo(1):src_hi(1),src_lo(2):src_hi(2),src_lo(3):src_hi(3),NVAR)
+  real(rt), intent(in   ) :: problo(3), dx(3)
+  real(rt), intent(in   ), value :: time, dt
 
-  integer          :: i, j, k
-  real(rt)         :: x, y, z, dist, r_0, H_0, W_0, Hext, t_stop
+  integer  :: i, j, k
+  real(rt) :: x, y, z, dist, r_0, H_0, W_0, Hext, t_stop
 
   integer :: ihe4_p
-
-  src(lo(1):hi(1),lo(2):hi(2),lo(3):hi(3),:) = ZERO ! Fill work region only
 
   r_0 = heating_rad
 
